[package]
name = "mistletoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
num-traits = "0.2.14"
num-integer = "0.1.45"
nom = "7.1.1"
itertools = "0.12.0"
maplit = "1.0.2"
criterion = "0.5.1"
rayon = "1.6.0"
dirmod = "0.1.5"
regex = "1.7.0"
pathfinding = "4.0.0"
serde_json = "1.0.89"
hashbrown = "0.14.3"
lru = "0.12.1"
transpose = "0.2.2"

serde = { version = "1.0.150", features = ["derive"] }

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false